filtring group type from backend
