# vip-core/src/main/java/fr/insalyon/creatis/vip/core/server/controller/GroupController.java
@@ -33,10 +33,12 @@ public class GroupController {
     }
 
     @GetMapping
-    public PrecisePage<Group> list(@RequestParam(defaultValue = "0") @PositiveOrZero int offset,
+    public PrecisePage<Group> list(@RequestParam(defaultValue = "false") boolean onlyApplications,
+            @RequestParam(defaultValue = "false") boolean onlyResources,
+            @RequestParam(defaultValue = "0") @PositiveOrZero int offset,
             @RequestParam(defaultValue = "10") @Positive @Max(value = 50) int quantity)
             throws VipException {
-        return groupBusiness.get(offset, quantity);
+        return groupBusiness.get(onlyApplications, onlyResources, offset, quantity);
     }
 
     @GetMapping(value = "{id}")
